--- a/ArcticMap/acgmap/static/acgmap/arctic_style.css
+++ b/ArcticMap/acgmap/static/acgmap/arctic_style.css
@@ -129,7 +129,16 @@ html body .container-fluid.body-content {
     width: 100%;
     height: 100%;
     position: relative;
+    z-index: 0;
 }
+
+#chart-overlay {
+    position: absolute;
+    right: 0px;
+    bottom: 100px;
+    z-index: 1;
+}
+
 /* footer location on map */
 #footer {
     position:absolute;
@@ -152,78 +161,11 @@ html body .container-fluid.body-content {
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	z-index: 0;
-}
-/*
-    css for nav container where the charts are displayed
-*/
-#nav-menu {
-    position: absolute;
-    left: 50px;
-    top: 10px;
-    opacity: 0.8;
-    z-index: 1;
-}
-
-/* adjust colors for subpage navbars */
-#navbar {
-    background: var(--accent);
-}
-
-#navbar .navbar-toggler {
-    color: var(--accent);
-}
-
-.navbar-light .navbar-nav .nav-link {
-    color: var(--primary);
-}
-
-.nav .chart-container{
-    display: none;
-    width: -moz-fit-content;
-    width: fit-content;
-
-    height: -moz-fit-content;
-    height: fit-content;
-}
-
-.chart-container:target {
-    visibility: visible;
-    display: block;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
-    color: #fff;
-    background-color: var(--primary);
-}
-
-a {
-    color: var(--primary);
-    text-decoration: none;
-    background-color: transparent;
 }
 
 .canvas-container{
-    height: 600px;
-    width: 800px;
-}
-
-#tab-nav{
-    align-items: center;
-    background: #FAFCFE;
-    border: 1px solid rgba(0, 32, 74, 0.05);
-    border-radius: 12px;
-
-    flex: none;
-}
-
-#tab-content{
-    align-items: center;
-    background: #FAFCFE;
-    border: 1px solid rgba(0, 32, 74, 0.05);
-    border-radius: 12px;
-
-    flex: none;
+    height: 500px;
+    width: 700px;
 }
 
 #tempChart{
