--- a/ArcticMap/acgmap/static/acgmap/arctic_style.css
+++ b/ArcticMap/acgmap/static/acgmap/arctic_style.css
@@ -135,7 +135,67 @@ html body .container-fluid.body-content {
 #chart-overlay {
     position: absolute;
     right: 0px;
+    bottom: 200px;
+    z-index: 1;
+}
+
+.map-menu {
+    position: absolute;
+    left: 35%;
     bottom: 100px;
+    z-index: 1;
+}
+
+.scale-container {
+    /* Auto Layout */
+    flex-direction: row;
+    align-items: center;
+    z-index: 1;
+
+    position: inherit;
+    /* width: 72px; */
+    width: -moz-fit-content;
+    width: fit-content;
+    /* height: 616px; */
+    height: 150%;
+    margin: 4px 8px;
+    padding: 8px;
+
+    background: #FFFFFF;
+    /* Turquoise */
+    border: 1px solid var(--primary);
+    box-sizing: border-box;
+    box-shadow: 0px 0px 0px 4px rgba(43, 179, 192, 0.2);
+    border-radius: 8px;
+
+    /* Inside Auto Layout */
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+
+.scale-group-depth {
+    text-align: center;
+    width: 600px;
+    height: 16px;
+    background: #FFFFFF;
+}
+
+.slider {
+   width: 100%;
+  -webkit-appearance: none;  /* Override default CSS styles */
+  height: 100%;
+  position: relative;
+  align-items: center;
+  background-color: #d3d3d3;ö
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+  border-radius: 5px;
+  outline: none; /* Remove outline */
+}
+
+#decade-button-nav{
+    text-align:center;
     z-index: 1;
 }
 
@@ -200,6 +260,90 @@ html body .container-fluid.body-content {
     flex: none;
 }
 
+/** Labels below scale**/
+.sliderticks {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+.sliderticks p {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 1px;
+  background: #D3D3D3;
+  height: 10px;
+  line-height: 40px;
+  margin: 0 0 20px 0;
+}
+.sliderticks .temp{
+  position: absolute;
+}
+
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  -moz-appearance: none;
+  appearance: none;
+  width: 15px; /* Set a specific slider handle width */
+  height: 100%; /* Slider handle height */
+  background: #04AA6D; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+  border-radius: 50%;
+}
+
+#temp_scale::-webkit-slider-thumb{
+  display: none;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 0;
+  height: 0;
+}
+
+#temp_scale[type=range]::-moz-range-thumb {
+  display: none;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 0;
+  height: 0;
+}
+
+.depth_temp_scale{
+  background: linear-gradient(0.25turn, var(--subtle_text), var(--accent));
+}
+
+/* hide input thumb for chart legend range*/
+.depth_temp_scale::-webkit-slider-thumb{
+  display: none;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 0;
+  height: 0;
+}
+
+.depth_temp_scale[type=range]::-moz-range-thumb {
+  display: none;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 0;
+  height: 0;
+}
+
+
+.slider::-moz-range-thumb {
+  width: 15px; /* Set a specific slider handle width */
+  height: 15px; /* Slider handle height */
+  background: #04AA6D; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
 /**************************
 * Bootstrap Customization *
 **************************/
@@ -215,7 +359,7 @@ html body .container-fluid.body-content {
     border-color: var(--primary);
 }
 
-.btn-secondary:focus {
+.btn-secondary:active {
     color: var(--primary_light);
     background: var(--primary);
     border-color: var(--primary);
