bug fix: switching between different time intervals and chart select

--- a/ArcticMap/acgmap/static/acgmap/arctic_style.css
+++ b/ArcticMap/acgmap/static/acgmap/arctic_style.css
@@ -144,6 +144,9 @@ html body .container-fluid.body-content {
     left: 35%;
     bottom: 100px;
     z-index: 1;
+    opacity: 0.8;
+    -webkit-box-shadow: 5px 5px 10px 5px rgba(0,0,0,0.3);
+    box-shadow: 5px 5px 10px 5px rgba(0,0,0,0.3);
 }
 
 .scale-container {
